sidebar updates - working on js to shrink the sidebar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,47 @@
     </style> 
 </head>
 <body>
-    
-
+    <nav id="nav">
+        <div>
+            <img src="images/logo.svg" alt="" class="toHide" id="logoImg">
+            <img src="images/menu.svg" alt="" id="toggleButton">
+        </div>
+        <div>
+            <input type="text" placeholder="Buscar" class="toHide">
+            <img src="images/search.svg" alt="">
+        </div>
+        <div>
+            <img src="images/grid.svg" alt="">
+            <span class="menu-text toHide">Dashboard</span>
+        </div>
+        <div>
+            <img src="images/pet.svg" alt="">
+            <span class="menu-text toHide">Pets</span>
+        </div>
+        <div>
+            <img src="images/user.svg" alt="">
+            <span class="menu-text toHide">Clientes</span>
+        </div>
+        <div>
+            <img src="images/vet.svg" alt="">
+            <span class="menu-text toHide">Vets</span>
+        </div>
+        <div>
+            <img src="images/settings.svg" alt="">
+            <span class="menu-text toHide">Ajustes</span>
+        </div>
+        <div>
+            <img src="images/photo.jpg" alt="" class="toHide">
+            <div class="toHide">
+                <p>Eleanor Pena</p>
+                <p>Veterinária</p>
+            </div>
+            <img src="images/log-out.svg" alt="">
+        </div>
+    </nav>
+    <main>
+        Dashboard
+    </main>
 <script src="sidebar.js"></script>
 </body>
 </html>
