everything working - all animations working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style> 
 </head>
 <body>
-    <nav id="nav">
+    <nav id="nav" class="">
         <div>
             <img src="images/logo.svg" alt="" class="toHide" id="logoImg">
             <img src="images/menu.svg" alt="" id="toggleButton">
@@ -47,7 +47,7 @@
                 <p>Eleanor Pena</p>
                 <p>Veterinária</p>
             </div>
-            <img src="images/log-out.svg" alt="">
+            <img src="images/log-out.svg" alt="" class="log-out-pose">
         </div>
     </nav>
     <main>
